Added Contact, About pages and fixed the functionality of navigation bar.

--- a/Home/home.html
+++ b/Home/home.html
@@ -17,9 +17,9 @@
           <div></div>
         </div>
         <div class="dropdown">
-          <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
+          <a href="../Home/home.html">Home</a>
+          <a href="../About/about.html">About</a>
+          <a href="../Contact/contact.html">Contact</a>
         </div>
       </div>
       <div class="container">
