Changed minor details.

--- a/Home/home.html
+++ b/Home/home.html
@@ -42,12 +42,29 @@
         </div>
         <div class="hostel_card">
           <div class="top">
-            <div class="prize">₹1000 <spam class="sub">/ month</spam></div>
+            <div class="prize">₹1300 <spam class="sub">/ month</spam></div>
           </div>
           <div class="bottom">
             <div class="info">
               <h2>Hostel Name</h2>
-              <p class="sub">1.5km from College</p>
+              <p class="sub">2km from College</p>
+            </div>
+            <div class="more_info">
+              <div class="gender">Female</div>
+              <div class="more">
+                <p>See more details &rarr;</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="hostel_card">
+          <div class="top">
+            <div class="prize">₹1100 <spam class="sub">/ month</spam></div>
+          </div>
+          <div class="bottom">
+            <div class="info">
+              <h2>Hostel Name</h2>
+              <p class="sub">1km from College</p>
             </div>
             <div class="more_info">
               <div class="gender">Male</div>
@@ -59,15 +76,15 @@
         </div>
         <div class="hostel_card">
           <div class="top">
-            <div class="prize">₹1000 <spam class="sub">/ month</spam></div>
+            <div class="prize">₹1500 <spam class="sub">/ month</spam></div>
           </div>
           <div class="bottom">
             <div class="info">
               <h2>Hostel Name</h2>
-              <p class="sub">1.5km from College</p>
+              <p class="sub">0.5km from College</p>
             </div>
             <div class="more_info">
-              <div class="gender">Male</div>
+              <div class="gender">Female</div>
               <div class="more">
                 <p>See more details &rarr;</p>
               </div>
@@ -76,24 +93,7 @@
         </div>
         <div class="hostel_card">
           <div class="top">
-            <div class="prize">₹1000 <spam class="sub">/ month</spam></div>
-          </div>
-          <div class="bottom">
-            <div class="info">
-              <h2>Hostel Name</h2>
-              <p class="sub">1.5km from College</p>
-            </div>
-            <div class="more_info">
-              <div class="gender">Male</div>
-              <div class="more">
-                <p>See more details &rarr;</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="hostel_card">
-          <div class="top">
-            <div class="prize">₹1000 <spam class="sub">/ month</spam></div>
+            <div class="prize">₹10250 <spam class="sub">/ month</spam></div>
           </div>
           <div class="bottom">
             <div class="info">
