--- a/About/about.html
+++ b/About/about.html
@@ -27,9 +27,8 @@
         <section id="about">
             <div class="about-content">
                 <h2>About Us</h2>
-                <p>Welcome to Hostel Booking, your reliable platform for booking hostels tailored for students. Our mission is to provide affordable and convenient accommodation options that cater specifically to the needs of students, whether it's for short-term stays or longer durations.</p>
-                <p>At Hostel Booking, we understand the importance of finding the right place to stay, which is why we offer a variety of hostels categorized for girls, boys, and both, ensuring you find an accommodation that suits your preferences and budget.</p>
-                <p>Explore our easy-to-use website to discover hostels, filter by price range, distance, and category, and make hassle-free bookings. Our commitment is to provide you with a seamless experience from booking to checking in.</p>
+                <p>Welcome to Hostel Booking, your reliable source for finding nearby hostels specifically for boys and girls. Our platform is designed to help you quickly and easily discover detailed information on hostels that fit your needs. From amenities to location, we provide all the essential details to help you make an informed decision. 
+                While we don’t offer booking services, our goal is to make your search for the perfect accommodation as smooth as possible. Explore our site to find your ideal hostel today!</p>
                 <p>For any inquiries or assistance, feel free to <a href="../contact/contact.html">contact us</a>. We're here to help you make the most out of your stay.</p>
                 <p>Thank you for choosing Hostel Booking!</p>
             </div>
