--- a/Details/details.html
+++ b/Details/details.html
@@ -22,21 +22,22 @@
           <a href="../Contact/contact.html">Contact</a>
         </div>
       </div>
+      <div class="progress"><h1 align="center" style="color: lime;">In progress...</h1></div>
       <div class="container">
         <div class="hostel_details">
           <div class="image-gallery">
             <!-- Images will be dynamically inserted here -->
           </div>
-          <h1 id="hostelName">Hostel Name</h1>
-          <p id="hostelPrice">₹1000 / month</p>
-          <p id="hostelDistance">1.5km from College</p>
-          <p id="hostelGender">Male</p>
+          <h1 align="center" id="hostelName">Hostel Name</h1>
+          <p align="center" id="hostelPrice">₹1000 / month</p>
+          <p align="center" id="hostelDistance">1.5km from College</p>
+          <p align="center" id="hostelGender">Male</p>
 
           <div class="amenities">
             <h2 align="center">Amenities</h2>
 
             <div class="box_same common_details">
-              <h2 align="center">Common Amenities</h2>
+              <h2 align="center">Common</h2>
               <div class="amenities-grid">
                 <div class="amenity">
                   <div id="washingMachinesCheck"></div>
@@ -67,14 +68,10 @@
 
             <div class="box_same single_room">
               <div class="single_top">
-                <h2>Single Room Amenities</h2>
+                <h2>Single Room</h2>
                 <p id="singleRoomPrice">₹1200 / month</p>
               </div>
               <div class="amenities-grid">
-                <div class="amenity">
-                  <div id="singleRoomAvailableCheck"></div>
-                  <p>Available</p>
-                </div>
                 <div class="amenity">
                   <div id="singleBedSingleCheck"></div>
                   <p>Single Bed</p>
@@ -104,14 +101,10 @@
 
             <div class="box_same shared_room">
               <div class="shared_top">
-                <h2>Shared Room Amenities</h2>
+                <h2>Shared Room</h2>
                 <p id="sharedRoomPrice">₹800 / month</p>
               </div>
               <div class="amenities-grid">
-                <div class="amenity">
-                  <div id="sharedRoomAvailableCheck"></div>
-                  <p>Available</p>
-                </div>
                 <div class="amenity">
                   <div id="sharedBedSingleCheck"></div>
                   <p>Single Bed</p>
