A lot of stuff to explain

--- a/About/about.html
+++ b/About/about.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us - Hostel Booking</title>
-    <link rel="stylesheet" href="../Home/home.html">
-    <link rel="stylesheet" href="about.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../Home/home.html" />
+    <link rel="stylesheet" href="about.css" />
+  </head>
+  <body>
     <div class="navbar">
-        <div class="dark-mode-toggle">🌙</div>
-        <div class="brand">Spotlet</div>
-        <div class="hamburger-menu">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div class="dropdown">
-            <a href="../Home/home.html">Home</a>
-            <a href="../About/about.html">About</a>
-            <a href="../Contact/contact.html">Contact</a>
-        </div>
+      <div class="dark-mode-toggle">🌙</div>
+      <div class="brand">Spotlet</div>
+      <div class="hamburger-menu">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="dropdown">
+        <a href="../Home/home.html">Home</a>
+        <a href="../About/about.html">About</a>
+        <a href="../Contact/contact.html">Contact</a>
+      </div>
     </div>
 
     <main>
-        <section id="about">
-            <div class="about-content">
-                <h2>About Us</h2>
-                <p>Welcome to Hostel Booking, your reliable source for finding nearby hostels specifically for boys and girls. Our platform is designed to help you quickly and easily discover detailed information on hostels that fit your needs. From amenities to location, we provide all the essential details to help you make an informed decision. 
-                While we don’t offer booking services, our goal is to make your search for the perfect accommodation as smooth as possible. Explore our site to find your ideal hostel today!</p>
-                <p>For any inquiries or assistance, feel free to <a href="../contact/contact.html">contact us</a>. We're here to help you make the most out of your stay.</p>
-                <p>Thank you for choosing Hostel Booking!</p>
-            </div>
-        </section>
+      <section id="about">
+        <div class="about-content">
+          <h2>About Us</h2>
+          <p>
+            Welcome to Hostel Booking, your reliable source for finding nearby
+            hostels specifically for boys and girls. Our platform is designed to
+            help you quickly and easily discover detailed information on hostels
+            that fit your needs. From amenities to location, we provide all the
+            essential details to help you make an informed decision. While we
+            don’t offer booking services, our goal is to make your search for
+            the perfect accommodation as smooth as possible. Explore our site to
+            find your ideal hostel today!
+          </p>
+          <p>
+            For any inquiries or assistance, feel free to
+            <a href="../contact/contact.html">contact us</a>. We're here to help
+            you make the most out of your stay.
+          </p>
+          <p>Thank you for choosing Hostel Booking!</p>
+        </div>
+      </section>
     </main>
 
     <script src="./about.js"></script>
-</body>
+  </body>
 </html>
