--- a/Details/details.html
+++ b/Details/details.html
@@ -22,7 +22,9 @@
           <a href="../Contact/contact.html">Contact</a>
         </div>
       </div>
-      <div class="progress"><h1 align="center" style="color: lime;">In progress...</h1></div>
+      <div class="progress">
+        <h1 align="center" style="color: lime">In progress...</h1>
+      </div>
       <div class="container">
         <div class="hostel_details">
           <div class="image-gallery">
