--- a/Details/details.html
+++ b/Details/details.html
@@ -31,8 +31,8 @@
             <!-- Images will be dynamically inserted here -->
           </div>
           <h1 align="center" id="hostelName">Hostel Name</h1>
-          <p align="center" id="hostelPrice">₹1000 / month</p>
-          <p align="center" id="hostelDistance">1.5km from College</p>
+          <p align="center" id="hostelPrice">-- / month</p>
+          <p align="center" id="hostelDistance">-- km from College</p>
           <p align="center" id="hostelGender">Male</p>
 
           <div class="amenities">
@@ -41,6 +41,10 @@
             <div class="box_same common_details">
               <h2 align="center">Common</h2>
               <div class="amenities-grid">
+                <div class="amenity">
+                  <div id="wifiCheck"></div>
+                  <p>Wifi</p>
+                </div>
                 <div class="amenity">
                   <div id="washingMachinesCheck"></div>
                   <p>Washing Machines</p>
@@ -65,13 +69,21 @@
                   <div id="cctvCheck"></div>
                   <p>CCTV</p>
                 </div>
+                <div class="amenity">
+                  <div id="ironBoxCheck"></div>
+                  <p>Iron Box</p>
+                </div>
+                <div class="amenity">
+                  <div id="commonBathroomCheck"></div>
+                  <p>Common Bathroom</p>
+                </div>
               </div>
             </div>
 
             <div class="box_same single_room">
               <div class="single_top">
                 <h2>Single Room</h2>
-                <p id="singleRoomPrice">₹1200 / month</p>
+                <p id="singleRoomPrice">-- / month</p>
               </div>
               <div class="amenities-grid">
                 <div class="amenity">
@@ -93,10 +105,6 @@
                 <div class="amenity">
                   <div id="singlePrivateBathroomCheck"></div>
                   <p>Private Bathroom</p>
-                </div>
-                <div class="amenity">
-                  <div id="singleSharedBathroomCheck"></div>
-                  <p>Shared Bathroom</p>
                 </div>
               </div>
             </div>
@@ -126,10 +134,6 @@
                 <div class="amenity">
                   <div id="sharedPrivateBathroomCheck"></div>
                   <p>Private Bathroom</p>
-                </div>
-                <div class="amenity">
-                  <div id="sharedSharedBathroomCheck"></div>
-                  <p>Shared Bathroom</p>
                 </div>
               </div>
             </div>
