--- a/About/about.html
+++ b/About/about.html
@@ -29,8 +29,7 @@
                 <h2>About Us</h2>
                 <p>Welcome to Hostel Booking, your reliable source for finding nearby hostels specifically for boys and girls. Our platform is designed to help you quickly and easily discover detailed information on hostels that fit your needs. From amenities to location, we provide all the essential details to help you make an informed decision. 
                 While we don’t offer booking services, our goal is to make your search for the perfect accommodation as smooth as possible. Explore our site to find your ideal hostel today!</p>
-                <p>For any inquiries or assistance, feel free to <a href="../contact/contact.html">contact us</a>. We're here to help you make the most out of your stay.</p>
-                <p>Thank you for choosing Hostel Booking!</p>
+                <p>Thank you for choosing SPOTLET!</p>
             </div>
         </section>
     </main>
