--- a/About/about.html
+++ b/About/about.html
@@ -37,11 +37,7 @@
             the perfect accommodation as smooth as possible. Explore our site to
             find your ideal hostel today!
           </p>
-          <p>
-            For any inquiries or assistance, feel free to
-            <a href="../contact/contact.html">contact us</a>. We're here to help
-            you make the most out of your stay.
-          </p>
+          <p>Thank you for choosing SPOTLET!</p>
           <p>Thank you for choosing Hostel Booking!</p>
         </div>
       </section>
