--- a/About/about.html
+++ b/About/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us - Hostel Booking</title>
+    <title>Spotlet</title>
     <link rel="stylesheet" href="../Home/home.html" />
     <link rel="stylesheet" href="about.css" />
   </head>
