--- a/Details/details.html
+++ b/Details/details.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hostel Details</title>
+    <title>Spotlet</title>
     <link rel="stylesheet" href="./details.css" />
   </head>
   <body>
@@ -27,32 +27,41 @@
       <div class="container">
         <div class="hostel_details">
           <div class="image-gallery">
+            <img src="../Images/placeholder.png" alt="placeholder">
             <!-- Images will be dynamically inserted here -->
           </div>
-          <div class="top">
-            <h1 align="left" id="hostelName">Hostel Name</h1>
-            <div class="location">
-              <div class="icon"></div>
-              <div class="link-icon">
-                <div class="segment first-segment"></div>
-                <div class="segment second-segment"></div>
+          <div class="main-top">
+            <div class="top">
+              <h1 align="left" id="hostelName">Hostel Name</h1>
+              <div class="location">
+                <div class="icon"></div>
+                <div class="link-icon">
+                  <div class="segment first-segment"></div>
+                  <div class="segment second-segment"></div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="sub-top">
-            <p class="price price_text"><strong id="hostelPrice">--</strong> / month</p>
-            <p id="hostelGender">--</p>
-          </div>
-          <div class="info-container">
-            <span class="fee"
-              ><strong id="hostelDeposit">--</strong
-              ><span>Admission Fee</span></span
-            >
-            <div class="separator"></div>
-            <span class="distance"
-              ><strong id="hostelDistance">-- km</strong
-              ><span>from College</span></span
-            >
+            <div class="sub-top">
+              <p class="price price_text">
+                <strong id="hostelPrice">--</strong> / month
+              </p>
+              <p id="hostelGender">--</p>
+            </div>
+            <div class="info-container">
+              <span class="fee"
+                ><strong id="hostelDeposit">--</strong
+                ><span>Admission Fee</span></span
+              >
+              <div class="separator"></div>
+              <span class="distance"
+                ><strong id="hostelDistance">-- km</strong
+                ><span>from College</span></span
+              >
+            </div>
+            <div class="contact" id="hostelContact" align="center">
+              <span>For more details:</span><a class="contact_no"></a>
+              <!-- <a class="whatsapp_no"></a> -->
+            </div>
           </div>
           <div class="amenities">
             <h2 align="center" class="main">Amenities</h2>
