--- a/Details/details.html
+++ b/Details/details.html
@@ -27,9 +27,10 @@
       <div class="container">
         <div class="hostel_details">
           <div class="image-gallery">
-            <img src="../Images/placeholder.png" alt="placeholder">
+            <img src="../Images/placeholder.png" alt="placeholder" />
             <!-- Images will be dynamically inserted here -->
           </div>
+          <div class="dots"></div>
           <div class="main-top">
             <div class="top">
               <h1 align="left" id="hostelName">Hostel Name</h1>
@@ -50,7 +51,7 @@
             <div class="info-container">
               <span class="fee"
                 ><strong id="hostelDeposit">--</strong
-                ><span>Admission Fee</span></span
+                ><span id="feeExtraText">Admission Fee</span></span
               >
               <div class="separator"></div>
               <span class="distance"
@@ -62,6 +63,7 @@
               <span>For more details:</span><a class="contact_no"></a>
               <!-- <a class="whatsapp_no"></a> -->
             </div>
+            <span class="call" align="center">*Click the number to call</span>
           </div>
           <div class="amenities">
             <h2 align="center" class="main">Amenities</h2>
