--- a/About/about.html
+++ b/About/about.html
@@ -4,43 +4,177 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotlet</title>
-    <link rel="stylesheet" href="../Home/home.html" />
     <link rel="stylesheet" href="about.css" />
+    <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
   <body>
-    <div class="navbar">
-      <div class="dark-mode-toggle">🌙</div>
-      <div class="brand">Spotlet</div>
-      <div class="hamburger-menu">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="dropdown">
-        <a href="../Home/home.html">Home</a>
-        <a href="../About/about.html">About</a>
-      </div>
-    </div>
-
-    <main>
-      <section id="about">
-        <div class="about-content">
-          <h2>About Us</h2>
-          <p>
-            Welcome to Hostel Booking, your reliable source for finding nearby
-            hostels specifically for boys and girls. Our platform is designed to
-            help you quickly and easily discover detailed information on hostels
-            that fit your needs. From amenities to location, we provide all the
-            essential details to help you make an informed decision. While we
-            don’t offer booking services, our goal is to make your search for
-            the perfect accommodation as smooth as possible. Explore our site to
-            find your ideal hostel today!
-          </p>
-          <p>Thank you for choosing SPOTLET!</p>
+    <div class="wrapper">
+      <div class="navbar">
+        <div class="dark-mode-toggle">🌙</div>
+        <div class="brand">Spotlet</div>
+        <div class="hamburger-menu">
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
-      </section>
-    </main>
+        <div class="dropdown">
+          <a href="../Home/home.html">Home</a>
+          <a href="../About/about.html">About</a>
+        </div>
+      </div>
+      <div class="container">
+        <div class="about">
+          <h1 align="center">About Us</h1>
+          <div class="cards">
+            <div class="card">
+              <div class="card-content">
+                <div class="name" align="center">SREEDEV SS</div>
+                <div class="grid" align="center">
+                  <div class="buttoncontainer">
+                    <a
+                      class="button instagram"
+                      target="_blank"
+                      href="https://www.instagram.com/_mt_yt_"
+                    >
+                      <i
+                        style="padding-left: 15px; padding-top: 15px"
+                        class="bi bi-instagram"
+                      ></i>
+                    </a>
+                  </div>
 
+                  <div class="buttoncontainer">
+                    <a
+                      class="button linkedin"
+                      target="_blank"
+                      href="https://www.linkedin.com/in/sreedev-ss-3096aa291/"
+                    >
+                      <i
+                        style="padding-right: 15px; padding-top: 15px"
+                        class="bi bi-linkedin"
+                      ></i>
+                    </a>
+                  </div>
+
+                  <div class="buttoncontainer">
+                    <a
+                      class="button github"
+                      target="_blank"
+                      href="https://github.com/MTCodes01"
+                    >
+                      <i
+                        style="padding-left: 15px; padding-bottom: 15px"
+                        class="bi bi-github"
+                      ></i>
+                    </a>
+                  </div>
+
+                  <div class="buttoncontainer">
+                    <a
+                      class="button youtube"
+                      target="_blank"
+                      href="https://www.youtube.com/@MT_yt"
+                    >
+                      <i
+                        style="padding-right: 15px; padding-bottom: 15px"
+                        class="bi bi-youtube"
+                      ></i>
+                    </a>
+                  </div>
+                </div>
+                <!-- <div class="links">
+                  <a target="_blank" href="https://github.com/MTCodes01" class="link">Github</a>
+                  <a target="_blank" href="https://www.instagram.com/_mt_yt_" class="link">Instagram</a>
+                  <a target="_blank" href="https://www.linkedin.com/in/sreedev-ss-3096aa291/" class="link">LinkedIn</a>
+                </div> -->
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="name" align="center">MUHAMMED S</div>
+                <div class="grid" align="center">
+                  <div class="buttoncontainer">
+                    <a
+                      class="button instagram"
+                      target="_blank"
+                      href="https://www.instagram.com/smuhammed._/"
+                    >
+                      <i
+                        style="padding-left: 15px; padding-top: 15px"
+                        class="bi bi-instagram"
+                      ></i>
+                    </a>
+                  </div>
+
+                  <div class="buttoncontainer">
+                    <a
+                      class="button linkedin"
+                      target="_blank"
+                      href="https://www.linkedin.com/in/muhammed-s-0372b4283/"
+                    >
+                      <i
+                        style="padding-right: 15px; padding-top: 15px"
+                        class="bi bi-linkedin"
+                      ></i>
+                    </a>
+                  </div>
+
+                  <div class="buttoncontainer">
+                    <a
+                      class="button github"
+                      target="_blank"
+                      href="https://github.com/muhammeds88"
+                    >
+                      <i
+                        style="padding-left: 15px; padding-bottom: 15px"
+                        class="bi bi-github"
+                      ></i>
+                    </a>
+                  </div>
+
+                  <div class="buttoncontainer">
+                    <a
+                      class="button discord"
+                      target="_blank"
+                      href="https://discord.com"
+                    >
+                      <i
+                        style="padding-right: 15px; padding-bottom: 15px"
+                        class="bi bi-discord"
+                      ></i>
+                    </a>
+                  </div>
+                </div>
+                <!-- <div class="links">
+                  <a target="_blank" href="https://github.com/muhammeds88" class="link">Github</a>
+                  <a target="_blank" href="https://www.instagram.com/smuhammed._/" class="link">Instagram</a>
+                  <a target="_blank" href="https://www.linkedin.com/in/muhammed-s-0372b4283/" class="link">LinkedIn</a>
+                </div> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <p>
+        Welcome to Spotlet, a non-profit website done by Sreedev and Muhammed to
+        help newcomers easily find hostels. Our platform is designed to provide
+        detailed information about nearby hostels, ensuring that you can make
+        informed decisions quickly and easily. We aim to make your search for
+        the perfect accommodation as smooth as possible by offering
+        comprehensive details on amenities, locations, and more.
+      </p>
+      <p>
+        While Spotlet doesn't offer direct booking services, our goal is to
+        simplify your search for reliable and comfortable hostels. Explore our
+        site to find your ideal hostel today and make your transition to a new
+        place stress-free!
+      </p>
+      <h4 align="center">Thank you for using Spotlet!</h4>
+    </div>
     <script src="./about.js"></script>
   </body>
 </html>
