added 1 more hostel

--- a/About/about.html
+++ b/About/about.html
@@ -33,6 +33,7 @@
             <div class="card">
               <div class="card-content">
                 <div class="name" align="center">SREEDEV SS</div>
+                <a href="tel=+91 8921930800" class="contact">+91 8921930800</a>
                 <div class="grid" align="center">
                   <div class="buttoncontainer">
                     <a
@@ -96,6 +97,7 @@
             <div class="card">
               <div class="card-content">
                 <div class="name" align="center">MUHAMMED S</div>
+                <a href="tel=+91 8891257899" class="contact">+91 8891257899</a>
                 <div class="grid" align="center">
                   <div class="buttoncontainer">
                     <a
