--- a/Details/details.html
+++ b/Details/details.html
@@ -63,7 +63,20 @@
               <span>For more details:</span><a class="contact_no"></a>
               <!-- <a class="whatsapp_no"></a> -->
             </div>
-            <span class="call" align="center">*Click the number to call</span>
+            <span class="call" align="center">*Click the number to call & Click the red location icon to view location</span>
+          </div>
+          <h2 align="center" class="main">Availability</h2>
+          <div class="availability" id="count">
+            <table align="center">
+              <tr>
+                <th>Males</th>
+                <th>Females</th>
+              </tr>
+              <tr>
+                <td id="maleCount">-</td>
+                <td id="femaleCount">-</td>
+              </tr>
+            </table>
           </div>
           <div class="amenities">
             <h2 align="center" class="main">Amenities</h2>
