--- a/About/about.html
+++ b/About/about.html
@@ -140,13 +140,13 @@
 
                   <div class="buttoncontainer">
                     <a
-                      class="button discord"
+                      class="button facebook"
                       target="_blank"
-                      href="https://discord.com"
+                      href="https://www.facebook.com/profile.php?id=61564188883780&mibextid=ZbWKwL"
                     >
                       <i
                         style="padding-right: 15px; padding-bottom: 15px"
-                        class="bi bi-discord"
+                        class="bi bi-facebook"
                       ></i>
                     </a>
                   </div>
