added a text below availability

--- a/Details/details.html
+++ b/Details/details.html
@@ -63,10 +63,13 @@
               <span>For more details:</span><a class="contact_no"></a>
               <!-- <a class="whatsapp_no"></a> -->
             </div>
-            <span class="call" align="center">*Click the number to call & Click the red location icon to view location</span>
+            <span class="call" align="center"
+              >*Click the number to call & Click the red location icon to view
+              location</span
+            >
           </div>
-          <h2 align="center" class="main">Availability</h2>
           <div class="availability" id="count">
+            <h2 align="center" class="main avail_top">Availability</h2>
             <table align="center">
               <tr>
                 <th>Males</th>
@@ -77,6 +80,11 @@
                 <td id="femaleCount">-</td>
               </tr>
             </table>
+            <br />
+            <div class="call" align="center">
+              *contact the number given above for confirmation about the
+              availability.
+            </div>
           </div>
           <div class="amenities">
             <h2 align="center" class="main">Amenities</h2>
