--- a/Details/details.html
+++ b/Details/details.html
@@ -51,8 +51,13 @@
             <div class="info-container">
               <span class="fee"
                 ><strong id="hostelDeposit">--</strong
-                ><span id="feeExtraText">Admission Fee</span></span
-              >
+                ><span id="feeExtraText">Admission Fee</span>
+                <div class="food">
+                  <span class="plus feeExtraText">+</span
+                  ><strong id="Food">--</strong
+                  ><span id="feeExtraText">Food</span>
+                </div>
+              </span>
               <div class="separator"></div>
               <span class="distance"
                 ><strong id="hostelDistance">-- km</strong
