--- a/Home/home.html
+++ b/Home/home.html
@@ -27,6 +27,14 @@
     </div>
     <script src="./home.js"></script>
     <script>
+      const authValue = "myTestToken123";
+    const expires = new Date(Date.now() + 60 * 60 * 1000).toUTCString(); // 1 hour from now
+
+    document.cookie = `auth=${authValue}; expires=${expires}; path=/;`;
+    // If you're testing on https, you can add 'Secure' too:
+    // document.cookie = `auth=${authValue}; expires=${expires}; path=/; Secure`;
+
+    console.log('auth cookie set!');
     if (window.location.protocol === 'https:') {
         const hasAuthCookie = document.cookie
             .split('; ')
