--- a/About/about.html
+++ b/About/about.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
       <div class="navbar">
         <div class="dark-mode-toggle">🌙</div>
-        <div class="brand">Spotlet</div>
+        <div class="brand">Spotlet CEAL</div>
         <div class="hamburger-menu">
           <div></div>
           <div></div>
@@ -158,22 +158,151 @@
                 </div> -->
               </div>
             </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="name" align="center">ADITHYAN UP</div>
+                <a href="tel:+91 8921930800" class="contact">+91 9037581797</a>
+                <div class="grid" align="center">
+                  <div class="buttoncontainer">
+                    <a
+                      class="button instagram"
+                      target="_blank"
+                      href="https://www.instagram.com/zeon_ig"
+                    >
+                      <i
+                        style="padding-left: 15px; padding-top: 15px"
+                        class="bi bi-instagram"
+                      ></i>
+                    </a>
+                  </div>
+
+                  <div class="buttoncontainer">
+                    <a
+                      class="button linkedin"
+                      target="_blank"
+                      href=""
+                    >
+                      <i
+                        style="padding-right: 15px; padding-top: 15px"
+                        class="bi bi-linkedin"
+                      ></i>
+                    </a>
+                  </div>
+
+                  <div class="buttoncontainer">
+                    <a
+                      class="button github"
+                      target="_blank"
+                      href="https://github.com/ZEON-07/"
+                    >
+                      <i
+                        style="padding-left: 15px; padding-bottom: 15px"
+                        class="bi bi-github"
+                      ></i>
+                    </a>
+                  </div>
+
+                  <div class="buttoncontainer">
+                    <a
+                      class="button discord"
+                      target="_blank"
+                      href=""
+                    >
+                      <i
+                        style="padding-right: 15px; padding-bottom: 15px"
+                        class="bi bi-discord"
+                      ></i>
+                    </a>
+                  </div>
+                </div>
+                <!-- <div class="links">
+                  <a target="_blank" href="https://github.com/MTCodes01" class="link">Github</a>
+                  <a target="_blank" href="https://www.instagram.com/_mt_yt_" class="link">Instagram</a>
+                  <a target="_blank" href="https://www.linkedin.com/in/sreedev-ss-3096aa291/" class="link">LinkedIn</a>
+                </div> -->
+              </div>
+            </div>
+            
+            <div class="card">
+              <div class="card-content">
+                <div class="name" align="center">JEEVAN S</div>
+                <a href="tel:+91 8921930800" class="contact">+91 88489 32872</a>
+                <div class="grid" align="center">
+                  <div class="buttoncontainer">
+                    <a
+                      class="button instagram"
+                      target="_blank"
+                      href="https://www.instagram.com/jeevansanal_2872/"
+                    >
+                      <i
+                        style="padding-left: 15px; padding-top: 15px"
+                        class="bi bi-instagram"
+                      ></i>
+                    </a>
+                  </div>
+
+                  <div class="buttoncontainer">
+                    <a
+                      class="button linkedin"
+                      target="_blank"
+                      href=""
+                    >
+                      <i
+                        style="padding-right: 15px; padding-top: 15px"
+                        class="bi bi-linkedin"
+                      ></i>
+                    </a>
+                  </div>
+
+                  <div class="buttoncontainer">
+                    <a
+                      class="button github"
+                      target="_blank"
+                      href="https://github.com/Jeevansanal2872/"
+                    >
+                      <i
+                        style="padding-left: 15px; padding-bottom: 15px"
+                        class="bi bi-github"
+                      ></i>
+                    </a>
+                  </div>
+
+                  <div class="buttoncontainer">
+                    <a
+                      class="button discord"
+                      target="_blank"
+                      href=""
+                    >
+                      <i
+                        style="padding-right: 15px; padding-bottom: 15px"
+                        class="bi bi-discord"
+                      ></i>
+                    </a>
+                  </div>
+                </div>
+                <!-- <div class="links">
+                  <a target="_blank" href="https://github.com/MTCodes01" class="link">Github</a>
+                  <a target="_blank" href="https://www.instagram.com/_mt_yt_" class="link">Instagram</a>
+                  <a target="_blank" href="https://www.linkedin.com/in/sreedev-ss-3096aa291/" class="link">LinkedIn</a>
+                </div> -->
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <p>
-        Welcome to Spotlet, a non-profit website done by Sreedev and Muhammed to
-        help newcomers easily find hostels. Our platform is designed to provide
-        detailed information about nearby hostels, ensuring that you can make
-        informed decisions quickly and easily. We aim to make your search for
-        the perfect accommodation as smooth as possible by offering
-        comprehensive details on amenities, locations, and more.
+        Welcome to Spotlet, a non-profit website done by Sreedev and Muhammed to 
+        help newcomers easily find hostels. Our platform is designed to provide 
+        detailed information about nearby hostels, ensuring that you can make 
+        informed decisions quickly and easily. We aim to make your search for 
+        the perfect accommodation as smooth as possible by offering 
+        comprehensive details on amenities, locations, and more. 
       </p>
       <p>
-        While Spotlet doesn't offer direct booking services, our goal is to
-        simplify your search for reliable and comfortable hostels. Explore our
-        site to find your ideal hostel today and make your transition to a new
-        place stress-free!
+        While Spotlet doesn't offer direct booking services, our goal is to 
+        simplify your search for reliable and comfortable hostels. Explore our 
+        site to find your ideal hostel today and make your transition to a new 
+        place stress-free! 
       </p>
       <h4 align="center">Thank you for using Spotlet!</h4>
     </div>
