--- a/Home/home.html
+++ b/Home/home.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
       <div class="navbar">
         <div class="dark-mode-toggle">🌙</div>
-        <div class="brand">Spotlet</div>
+        <div class="brand">Spotlet  CEAL</div>
         <div class="hamburger-menu">
           <div></div>
           <div></div>
