--- a/About/about.html
+++ b/About/about.html
@@ -291,7 +291,7 @@
         </div>
       </div>
       <p>
-        Welcome to Spotlet, a non-profit website done by Sreedev and Muhammed to 
+        Welcome to Spotlet, a website done by Sreedev and Muhammed to 
         help newcomers easily find hostels. Our platform is designed to provide 
         detailed information about nearby hostels, ensuring that you can make 
         informed decisions quickly and easily. We aim to make your search for 
