Added extra fees

--- a/Details/details.html
+++ b/Details/details.html
@@ -62,6 +62,11 @@
                   ><strong id="Food">--</strong
                   ><span id="feeExtraText">Food</span>
                 </div>
+                <div class="extra-fee">
+                  <span class="plus feeExtraText">+</span
+                  ><strong id="Extra">--</strong
+                  ><span id="feeExtraText"> </span>
+                </div>
               </span>
               <div class="separator"></div>
               <span class="distance"
