Updated the about page for responsivness.

--- a/About/about.html
+++ b/About/about.html
@@ -290,20 +290,22 @@
           </div>
         </div>
       </div>
-      <p>
+      <div class="content">
+        <p>
         Welcome to Spotlet, a website done by Sreedev and Muhammed to 
         help newcomers easily find hostels. Our platform is designed to provide 
         detailed information about nearby hostels, ensuring that you can make 
         informed decisions quickly and easily. We aim to make your search for 
         the perfect accommodation as smooth as possible by offering 
         comprehensive details on amenities, locations, and more. 
-      </p>
-      <p>
+        </p>
+        <p>
         While Spotlet doesn't offer direct booking services, our goal is to 
         simplify your search for reliable and comfortable hostels. Explore our 
         site to find your ideal hostel today and make your transition to a new 
         place stress-free! 
-      </p>
+        </p>
+      </div>
       <h4 align="center">Thank you for using Spotlet!</h4>
     </div>
     <script src="./about.js"></script>
