Added a statement in the details page.

--- a/Details/details.html
+++ b/Details/details.html
@@ -63,9 +63,8 @@
                   ><span id="feeExtraText">Food</span>
                 </div>
                 <div class="extra-fee">
-                  <span class="plus feeExtraText">+</span
-                  ><strong id="Extra">--</strong
-                  ><span id="feeExtraText"> </span>
+                  <strong id="Extra"></strong
+                  ><span id="feeExtraText"></span>
                 </div>
               </span>
               <div class="separator"></div>
